# GenDS

./: .gitignore  CMakeLists.txt  README.md  run.sh
cmake/: FindGenDS.cmake
data/cams_config/: polycam.cam
data/corrs/: equi-corr-00-0.txt  equi-corr-00-1.txt  equi-corr-00-2.txt  equi-corr-00-3.txt  equi-corr-00-4.txt  equi-corr-01-0.txt  equi-corr-01-1.txt  equi-corr-01-2.txt  equi-corr-01-3.txt  equi-corr-01-4.txt  equi-corr-02-0.txt  equi-corr-02-1.txt  equi-corr-02-2.txt  equi-corr-02-3.txt  equi-corr-02-4.txt  equi-corr-03-0.txt  equi-corr-03-1.txt  equi-corr-03-2.txt  equi-corr-03-3.txt  equi-corr-03-4.txt  equi-corr-04-0.txt  equi-corr-04-1.txt  equi-corr-04-2.txt  equi-corr-04-3.txt  equi-corr-04-4.txt  equi-corr-05-0.txt  equi-corr-05-1.txt  equi-corr-05-2.txt  equi-corr-05-3.txt  equi-corr-05-4.txt  equi-corr-06-0.txt  equi-corr-06-1.txt  equi-corr-06-2.txt  equi-corr-06-3.txt  equi-corr-06-4.txt  equi-corr-07-0.txt  equi-corr-07-1.txt  equi-corr-07-2.txt  equi-corr-07-3.txt  equi-corr-07-4.txt  (+59 more)
src/: CMakeLists.txt  align_data.h  align_parallax.cpp  alignment.cpp  alignment.h  gends.cpp  gends.h  linear_solve.h  mesh.h  object_function.cpp  object_function.h  optimisor.h  optimisor_o.cpp
test/: example.cpp
