CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
SET(CMAKE_CXX_STANDARD 11)

PROJECT(GenDS)
LIST(APPEND CMAKE_MODULE_PATH "${GenDS_SOURCE_DIR}/cmake")

# bind eigen
FIND_PACKAGE(Eigen3 REQUIRED)
MESSAGE(STATUS "EIGEN3_INCLUDE_DIRS = " ${EIGEN3_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS})

# lib
INCLUDE_DIRECTORIES(src)
ADD_LIBRARY(gends SHARED
    src/gends.cpp
    src/object_function.cpp)

# test
INCLUDE_DIRECTORIES(test)
ADD_EXECUTABLE(example test/example.cpp)
TARGET_LINK_LIBRARIES(example gends)

# install
INSTALL(TARGETS gends
    LIBRARY DESTINATION lib)
INSTALL(FILES src/gends.h
    DESTINATION include/gends)

