


ADD_EXECUTABLE(GenDS
    align_parallax.cpp
    alignment.cpp
    mesh.cpp
    optimisor_o.cpp)

# for opencv
FIND_PACKAGE(OpenCV REQUIRED)
MESSAGE(STATUS "OpenCV_INCLUDE_DIRS = " ${OpenCV_INCLUDE_DIRS})
MESSAGE(STATUS "OpenCV_LIBS = " ${OpenCV_LIBS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(GenDS ${OpenCV_LIBS})

# for eigen
FIND_PACKAGE(Eigen3 REQUIRED)
MESSAGE(STATUS "EIGEN3_INCLUDE_DIRS = " ${EIGEN3_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS})







